--- a/ansible/playbooks/nginx.yml
+++ b/ansible/playbooks/nginx.yml
@@ -18,7 +18,7 @@
 
     - name: Configure Nginx for Favizone
       template:
-        src: templates/nginx.conf
+        src: ansible/templates/nginx.conf
         dest: /etc/nginx/sites-available/app.favizone.com
 
     - name: Create symbolic link for Nginx site
